ストップウォッチ以外のサンプル類を削除

--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Web Componetnsのサンプル</title>
+    <title>Web Componentsのサンプル</title>
+    <link rel="import" href="stopwatch-element/stopwatch-element.html">
 </head>
 <body>
-    <h1>Web Componetnsのサンプル</h1>
-    <ul>
-        <li><a href="./view/01/index.html">Sample1 -Custom Elements-</a></li>
-        <li><a href="./view/02/index.html">Sample2 -with HTML templates-</a></li>
-        <li><a href="./view/03/index.html">Sample3 -with HTML Imports-</a></li>
-        <li><a href="./view/04/index.html">Sample4 -CSS汚染-</a></li>
-        <li><a href="./view/05/index.html">Sample5 -using Shadow DOM-</a></li>
-        <li><a href="./view/06/index.html">Sample6 -Stopwatch Component-</a></li>
-    </ul>
+    <h1>Web Componentsのサンプル</h1>
+    <stopwatch-element></stopwatch-element>
+    <hr />
+    <stopwatch-element></stopwatch-element>
+    <hr />
 </body>
 </html>
